--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
             <img src="https://img2.pic.in.th/pic/LOGO-HONGSON-METAVERSE-MODEL-2.png" alt="Logo โรงเรียนห้องสอนศึกษา" class="header-logo">
         </div>
         <div class="header-content">
-            <h1 class="header-title">🗺️ ตัววางแผนจุดปล่อยสัญญาณ Wi-Fi (Centroid)</h1>
+            <h1 class="header-title">🗺️ ตัววางแผนจุดปล่อยสัญญาณ Wi-Fi (Voronoid)</h1>
             <p class="header-subtitle">โครงงานคณิตศาสตร์ประยุกต์ โรงเรียนห้องสอนศึกษา ในพระอุปถัมภ์ฯ</p>
         </div>
     </header>
